Bug 318086 - [KDE-Windows] not useful tooltip for KTeaTime's tray icon
Summary: [KDE-Windows] not useful tooltip for KTeaTime's tray icon
Status: RESOLVED FIXED
Alias: None
Product: kteatime
Classification: Applications
Component: general (other bugs)
Version First Reported In: 1.2.2
Platform: Microsoft Windows Microsoft Windows
: NOR normal
Target Milestone: ---
Assignee: Stefan Böhmann
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-04-09 12:59 UTC by Sergei Andreev
Modified: 2017-02-26 10:30 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Sergei Andreev 2013-04-09 12:59:49 UTC
There is no estimation time in tooltip when hovering cursor on tray icon. It says only generic "The Tea Cooker".

This problem first appered in version 1.2.0 (KDE 4.7.0)  Windows 7 (Bug 285894) and still exists in 1.2.2 (KDE 4.8.0) Windows 8.


Reproducible: Always

Steps to Reproduce:
1. Hover mouse cursor on KTeaTime tray icon

Actual Results:  
Tooltip contains string "The Tea Cooker".

Expected Results:  
Tooltip contains estimation time for current cooking tea.
Comment 1 Martin Sandsmark 2017-02-26 10:30:20 UTC
Git commit 453d4e2d1ca40575fd6cee0a5bfd7ac7e30ba3ba by Martin T. H. Sandsmark.
Committed on 26/02/2017 at 10:28.
Pushed by sandsmark into branch 'master'.

Switch to QSystemTrayIcon

Fixes a bunch of issues:

 * Popup notification not showing up when tea is done. This is the biggest issue, it is pretty useless without it.
 * Fix popup positioning when clicking, not it shows up in the right place right above the icon.
 * Fix tooltip.
 * Fix overlay icon when visualization is turned off.
Related: bug 318087, bug 375089
REVIEW: 129939

M  +27   -29   src/toplevel.cpp
M  +3    -3    src/toplevel.h

https://commits.kde.org/kteatime/453d4e2d1ca40575fd6cee0a5bfd7ac7e30ba3ba