Switch to QSystemTrayIcon

Fixes a bunch of issues:

 * Popup notification not showing up when tea is done. This is the biggest issue, it is pretty useless without it.
 * Fix popup positioning when clicking, not it shows up in the right place right above the icon.
 * Fix tooltip.
 * Fix overlay icon when visualization is turned off.

BUG: 318086
BUG: 318087
BUG: 375089
REVIEW: 129939